# feathr

./: FeathrRegistry.Dockerfile
.github/workflows/: publish-to-dockerhub.yml
deploy/: nginx.conf  start.sh
docs/how-to-guides/: azure-deployment-arm.md  azure-deployment-cli.md  azure_resource_provision.sh  feathr-advanced-topic.md
docs/samples/: local_quickstart_notebook.ipynb
feathr-sandbox/: README.md
feathr-sandbox/docker/: FeathrSandbox.Dockerfile  docker-compose.registry.mariadb.yml  docker-compose.registry.mssql.yml  docker-compose.registry.mysql.yml  docker-compose.registry.pgsql.yml  docker-compose.registry.sqlite.yml  docker-compose.sandbox.yml  nginx.conf
feathr-sandbox/envs/: mariadb-registry.env  mssql-registry.env  mysql-registry.env  pgsql-registry.env  sandbox.env  sqlite-registry.env
feathr-sandbox/feathr_init/: feathr_config.yaml  feathr_init_script.py
feathr-sandbox/migrations/mssql/: init-rbac-db.sql  init-registry-db.sql
feathr_project/: pyproject.toml  setup.py
feathr_project/feathr/: client.py  constants.py
feathr_project/feathr/registry/: _feathr_registry_client.py
feathr_project/feathr/spark_provider/: _localspark_submission.py
registry/access_control/: Dockerfile  README.md  pyproject.toml  setup.py
registry/access_control/feathr_rbac/: __main__.py
registry/access_control/feathr_rbac/rbac/: __init__.py  access.py  auth.py  config.py  db_rbac.py  interface.py
registry/access_control/feathr_rbac/rbac/api/: __init__.py
registry/access_control/feathr_rbac/rbac/api/v1/: __init__.py  access_control.py  registry.py
registry/access_control/feathr_rbac/rbac/models/: base.py  orm.py
registry/handlers/: pyproject.toml  setup.py
registry/handlers/feathr_handlers/: __init__.py
registry/handlers/feathr_handlers/db/: databases.py  utils.py
registry/purview-registry/: endpoints.py  main.py
registry/purview-registry/registry/: purview_registry.py
registry/sql-registry/: Dockerfile  README.md  pyproject.toml  setup.py
registry/sql-registry/feathr_registry/: __main__.py
registry/sql-registry/feathr_registry/registry/: config.py  db_registry.py  interface.py
registry/sql-registry/feathr_registry/registry/api/: __init__.py
registry/sql-registry/feathr_registry/registry/api/v1/: __init__.py  datasources.py  entities.py  features.py  projects.py
registry/sql-registry/feathr_registry/registry/models/: base.py  orm.py
registry/sql-registry/test/: test_basic.py
ui/: Dockerfile  README.md
ui/src/api/: api.tsx
